// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchToggle matches the snapshot 1`] = `
.c0 {
  padding: 10px;
  z-index: 1;
  width: 50px;
  height: 50px;
  border: 0;
  background: none;
}

.c0:hover {
  background-color: #ec0000;
  cursor: pointer;
}

.c0:hover svg {
  fill: white;
}

.c0:focus {
  outline: 4px solid #fec813;
}

<button
  class="c0"
  size="20"
  type="button"
>
  <svg
    data-testid="searchToggle-search-icon"
    focusable="false"
    viewBox="0 0 32 32"
    width="20"
  >
    <path
      d="M32 29.119l-9.825-9.825a12.217 12.217 0 1 0-2.88 2.881L29.118 32 32 29.119zm-19.771-8.746a8.145 8.145 0 1 1 0-16.289 8.145 8.145 0 0 1 0 16.29z"
      fill-rule="evenodd"
    />
  </svg>
  <span
    class="visuallyhidden"
    data-testid="searchToggle-label"
  >
    Foo bar
  </span>
</button>
`;

exports[`SearchToggle matches the snapshot 2`] = `
<button
  class="SearchToggle__StyledIcon-qg6jkp-0 bcSxwk"
  size="20"
  type="button"
>
  <svg
    data-testid="searchToggle-close-icon"
    focusable="false"
    viewBox="0 0 32 32"
    width="20"
  >
    <path
      d="M29.333 5.47L26.53 2.668 16 13.187 5.47 2.666 2.668 5.47 13.187 16 2.666 26.53l2.804 2.803L16 18.813l10.53 10.52 2.803-2.804L18.813 16z"
      fill-rule="evenodd"
    />
  </svg>
  <span
    class="visuallyhidden"
    data-testid="searchToggle-label"
  >
    Foo bar
  </span>
</button>
`;
